anthos-service-mesh/db_demo/db-demo-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: db-demo-ingress
  namespace: ${K8S_NS}
spec:
  hosts:
  - "${BASE_DOMAIN}"
  gateways:
  - asm-ingress/asm-ingressgateway
  http:
  - match:
    - uri:
        prefix: "/db-demo"
    rewrite:
      uri: "/" 
    route:
    - destination:
        host: ${APP_SVC_NAME}
        port:
          number: 80
